--- a/urbn.scss
+++ b/urbn.scss
@@ -123,6 +123,10 @@ $text-shadow: 0 1px 0 rgba(0, 0, 0, .05) !default;
   }
 }
 
+h2 {
+  font-size: calc(1.6em / 0.1); 
+}
+
 // Navs
 
 .dropdown-menu {
@@ -156,7 +160,14 @@ $text-shadow: 0 1px 0 rgba(0, 0, 0, .05) !default;
   color: $cyan;
 }
 
-// body 
+// tabset 
+
+.reveal a {
+  color: $cyan
+}
+
+
+// body  
 
 body {
   padding-right: 30px;
